# ai-toolkit

./: README.md  dgx_instructions.md  dgx_requirements.txt  flux_train_ui.py  requirements.txt  run.py  run_modal.py
config/examples/: generate.example.yaml  train_flex_redux.yaml  train_lora_chroma_24gb.yaml  train_lora_flex2_24gb.yaml  train_lora_flex_24gb.yaml  train_lora_flux_24gb.yaml  train_lora_flux_kontext_24gb.yaml  train_lora_flux_schnell_24gb.yaml  train_lora_hidream_48.yaml  train_lora_lumina.yaml  train_lora_omnigen2_24gb.yaml  train_lora_qwen_image_24gb.yaml  train_lora_qwen_image_edit_2509_32gb.yaml  train_lora_qwen_image_edit_32gb.yaml  train_lora_sd35_large_24gb.yaml  train_lora_wan21_14b_24gb.yaml  train_lora_wan21_1b_24gb.yaml  train_lora_wan22_14b_24gb.yaml  train_slider.example.yml
config/examples/modal/: modal_train_lora_flux_24gb.yaml  (+1 more)
extensions_built_in/sd_trainer/: DiffusionTrainer.py  SDTrainer.py
jobs/: ExtractJob.py
jobs/process/: BaseSDTrainProcess.py
scripts/: benchmark_optimizer_speed.py  extract_lora_from_flex.py
testing/: inspect_optimizer_state.py
toolkit/: bitsandbytes_utils.py  config_modules.py  cuda_malloc.py  custom_adapter.py  optimizer.py  progress_bar.py  rocm.py  stable_diffusion_model.py  warnings.py
toolkit/models/: lokr.py
toolkit/optimizers/: adam8bit.py  prodigy_8bit.py
toolkit/util/: quantize.py
ui/: next.config.ts  package-lock.json  package.json
ui/adlx_helper/: CMakeLists.txt  README.md  main.cpp
ui/cron/: paths.ts
ui/scripts/: readlink_patch.js
ui/src/: paths.ts  types.ts
(+32 files in other folders)
